# Biwackrater

./: .gitignore  README.md  pyproject.toml
biwackrater/: manage.py
biwackrater/biwackrater/: asgi.py  settings.py  urls.py  wsgi.py
biwackrater/maps/: urls.py  views.py
biwackrater/maps/templates/maps/: homepage.html
