[project]
name = "Biwackrater"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "MartinBartos", email = "martin.bartos971014@gmail.com"}]
requires-python = "== 3.11"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
Biwackrater = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
django = ">=5.0.6,<5.1"
folium = ">=0.16.0,<0.17"
